--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,10 @@ TSWLatexianTemp*
 
 # macOS
 *.DS_Store
+
+cvpr_submission/*.pdf
+COG_publications/2019_neurips_kr2ml/*.pdf
+COG_publications/2019_neurips_vigil/*.pdf
+MAC_publications/2018_nips_vigil/*.pdf
+MAC_publications/arxiv/*.pdf
+
