Ignore pdfs in submission folders

--- a/.gitignore
+++ b/.gitignore
@@ -251,6 +251,7 @@ Transfer_Learning/cvpr_2nd_submission/*.pdf
 Transfer_Learning/cvpr_rebuttal/*.pdf
 Transfer_Learning/arxiv_version/*.pdf
 Transfer_Learning/arxiv_version/submission_folder/v1/*.pdf
+Transfer_Learning/arxiv_version/submission_folder/v2/*.pdf
 COG_publications/2019_neurips_kr2ml/*.pdf
 COG_publications/2019_neurips_vigil/*.pdf
 MAC_publications/2018_nips_vigil/*.pdf
